target_sources(libommpfritt PRIVATE
  ${CMAKE_BINARY_DIR}/config.h
  cache.h
  cachedgetter.h
  common.cpp
  common.h
  enumnames.cpp
  enumnames.h
  dnf.cpp
  dnf.h
  logging.cpp
  logging.h
  maybeowner.h
  menuhelper.h
  orderedmap.h
  variant.cpp
  variant.h
  proxychain.cpp
  proxychain.h
  splinetype.cpp
  splinetype.h
  stringinterpolation.cpp
  stringinterpolation.h
  subcommandlineparser.cpp
  subcommandlineparser.h
  abstractfactory.h
  registers.cpp
  registers.h
)

add_subdirectory(animation)
add_subdirectory(aspects)
add_subdirectory(color)
add_subdirectory(commands)
add_subdirectory(geometry)
add_subdirectory(keybindings)
add_subdirectory(mainwindow)
add_subdirectory(managers)
add_subdirectory(objects)
add_subdirectory(preferences)
add_subdirectory(properties)
add_subdirectory(propertywidgets)
add_subdirectory(python)
add_subdirectory(renderers)
add_subdirectory(scene)
add_subdirectory(serializers)
add_subdirectory(tags)
add_subdirectory(tools)
add_subdirectory(widgets)
add_subdirectory(nodesystem)

configure_file("${CMAKE_CURRENT_SOURCE_DIR}/config.h.in" "${CMAKE_BINARY_DIR}/config.h")
