target_sources(libommpfritt PRIVATE
  boolean.cpp
  boolean.h
  cloner.cpp
  cloner.h
  convertedobject.cpp
  convertedobject.h
  ellipse.cpp
  ellipse.h
  empty.cpp
  empty.h
  instance.cpp
  instance.h
  lineobject.cpp
  lineobject.h
  mirror.cpp
  mirror.h
  object.cpp
  object.h
  path.cpp
  path.h
  proceduralpath.cpp
  proceduralpath.h
  rectangleobject.cpp
  rectangleobject.h
  text.cpp
  text.h
  tip.cpp
  tip.h
  view.cpp
  view.h
)

add_subdirectory(path)
