target_sources(libommpfritt PRIVATE
  brushselecttool.cpp
  brushselecttool.h
  knifetool.cpp
  knifetool.h
  pathtool.cpp
  pathtool.h
  selectobjectstool.cpp
  selectobjectstool.h
  selectpointstool.cpp
  selectpointstool.h
  selecttool.cpp
  selecttool.h
  selectsimilartool.cpp
  selectsimilartool.h
  toolbox.cpp
  toolbox.h
  tool.cpp
  tool.h
)

add_subdirectory(handles)
