target_sources(libommpfritt PRIVATE
  brushselecttool.cpp
  brushselecttool.h
  knifetool.cpp
  knifetool.h
  pathtool.cpp
  pathtool.h
  selectfacestool.cpp
  selectfacestool.h
  selectobjectstool.cpp
  selectobjectstool.h
  selectpointsbasetool.cpp
  selectpointsbasetool.h
  selectpointstool.cpp
  selectpointstool.h
  selecttool.cpp
  selecttool.h
  selectsimilartool.cpp
  selectsimilartool.h
  transformobjectshelper.cpp
  transformobjectshelper.h
  transformpointshelper.cpp
  transformpointshelper.h
  transformpointstool.cpp
  transformpointstool.h
  toolbox.cpp
  toolbox.h
  tool.cpp
  tool.h
)

add_subdirectory(handles)
