target_sources(libommpfritt PRIVATE
  animationbutton.cpp
  animationbutton.h
  codeedit.cpp
  codeedit.h
  combobox.cpp
  combobox.h
  coordinateedit.cpp
  coordinateedit.h
  filepathedit.cpp
  filepathedit.h
  multitabbar.cpp
  multitabbar.h
  numericedit.cpp
  numericedit.h
  referencelineedit.cpp
  referencelineedit.h
  treeexpandmemory.cpp
  treeexpandmemory.h
)

add_subdirectory(colorwidget)
